# BRDFEditor

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
res/BRDF/: Ashikhmin-Shierly.cl  BlinnPhong.cl  CookTorrance.cl  Lambert.cl  Mirror.cl  Oren-Nayar.cl
res/HDR/: LICENCE.txt
res/Kernels/: pathTracer.cl  pathTracerDL-IS.cl  pathTracerDL.cl
res/Kernels/Common/: Constants.cl  Geometry.cl  IntersectionTests.cl  LightSampling.cl  Random.cl  Types.cl
res/Models/: Licence.txt
res/Scenes/: CornellBox.json  MISScene.json  bunnyOnly.json  defaultScene copy.json  defaultScene.json  exampleScene.json  outdoorScene.json
src/: _clang-format  main.cpp
src/Core/: Exception.hpp  ImGuiManager.cpp  ImGuiManager.hpp  Input.cpp  Input.hpp  PassKey.hpp  Program.hpp  WindowContext.hpp  WindowManager.cpp  WindowManager.hpp  program.cpp
src/GL/: GLException.cpp  GLException.hpp  Shader.cpp  Shader.hpp  ShaderException.hpp  ShaderProgram.cpp  ShaderProgram.hpp
src/GUI/: CommonElements.cpp  CommonElements.hpp  Console.cpp  Console.hpp  GUI.hpp  GUIParams.hpp  SceneEvents.cpp  SceneEvents.hpp  TwoPanelLayout.cpp  TwoPanelLayout.hpp  gui.cpp  guiparams.cpp
src/GUI/BRDFEditing/: BRDFMatList.cpp  BRDFMatList.hpp  BRDFMatParams.cpp  BRDFMatParams.hpp  Editor.cpp  Editor.hpp  EditorParams.cpp  EditorParams.hpp  SourceEditor.cpp  SourceEditor.hpp
src/GUI/Graphs/: Graph.cpp  Graph.hpp  Graphs.cpp  Graphs.hpp
src/GUI/SceneRendering/: Materials.cpp  Materials.hpp  RenderSettings.hpp  SceneRendering.cpp  SceneRendering.hpp  SceneTools.cpp  SceneTools.hpp  SceneView.hpp  rendersettings.cpp  sceneview.cpp
src/OpenCLRenderer/: CLHeaders.hpp  Camera.cpp  Camera.hpp  EnvMap.cpp  EnvMap.hpp  RendererExceptions.hpp  Scene.cpp  Scene.hpp  SceneLoader.cpp  SceneLoader.hpp
src/OpenCLRenderer/Kernel/: BRDF.hpp  BRDFParams.cpp  BRDFParams.h  CustomKernel.cpp  CustomKernel.hpp  Kernel.hpp  KernelSource.cpp  KernelSource.hpp  ToneMappingKernel.cpp  ToneMappingKernel.hpp  ToneMappingKernelSource.cpp  ToneMappingKernelSource.hpp  brdf.cpp  kernel.cpp
src/OpenCLRenderer/Lights/: AreaLight.cpp  AreaLight.hpp  Light.cpp  Light.hpp  PointLight.cpp  PointLight.hpp  SphereLight.cpp  SphereLight.hpp
src/OpenCLRenderer/Materials/: Material.hpp  MaterialsLibrary.hpp  material.cpp  materialslibrary.cpp
src/OpenCLRenderer/Objects/: Cuboid.cpp  Cuboid.hpp  Object.cpp  Object.hpp  Plane.cpp  Plane.hpp  Sphere.cpp  Sphere.hpp  TriangleMesh.cpp  TriangleMesh.hpp
src/OpenCLRenderer/Objects/BVH/: BVH.hpp  bvh.cpp
src/OpenCLRenderer/Renderer/: DeviceInfo.hpp  PlatformInfo.hpp  Renderer.hpp  renderer.cpp
